--- a/src/app/app-grocery/app-grocery.component.html
+++ b/src/app/app-grocery/app-grocery.component.html
@@ -1,7 +1,7 @@
 <div>
     <h2> Grocery list manager </h2>
     <div class="row">
-        <div class="col-xs-6 col-md-4">
+        <div class="w-25 p-3 col-xs-6 col-md-4">
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="enter grocery items" 
                 [(ngModel)]="task" />
